correcting some spelling

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                         <div class = "buy-item2">
                             <div>
-                                <caption>Mobible App</caption><br>
+                                <caption>Mobile App</caption><br>
                                 <a href="#"><i class="fas fa-mobile-alt"></i></a>
                                 
                             </div>
